.kustomization/components/.pgadmin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pgadmin
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
      - image: dpage/pgadmin4:latest
        imagePullPolicy: Always
        name: pgadmin
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 1
            memory: 1Gi
          requests:
            cpu: 1
            memory: 516Mi
        securityContext:
          runAsUser: 5050
          runAsGroup: 5050
          allowPrivilegeEscalation: true
          capabilities:
            add:
              - NET_BIND_SERVICE
      serviceAccountName: sa-pgadmin
      restartPolicy: Always
