.kustomization/components/.pgadmin/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
spec:

  selector:
    app: pgadmin

  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
