.kustomization/components/.pgadmin/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pgadmin
spec:
  rules:
    - http:
        paths:
          - path: /pgadmin4
            pathType: Prefix
            backend:
              serviceName: pgadmin-nginx
              servicePort: 80
